--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 <meta name="keywords" content="lorem ipsum, lorem ipsum" />	
 <link rel="stylesheet" type="text/css" href="template05.css" media="screen" />
 
-<title>Archivo de música yuri</title>
+<title>Archivo de música</title>
 </head>
 <body>
   <!-- para FB -->
@@ -24,9 +24,9 @@
 <div id="wrapper">
 
 <div id="header">
-  <h1>Archivo de música yuri</h1>
+  <h1>Archivo de música</h1>
   <a href="/home/index">
-      <%= image_tag("portada.png", size: "980x200", class: "image", alt: "Portada") %>
+      <%= image_tag("portada.png", size: "227x195", class: "image", alt: "Portada") %>
       
   </a>
   <div class="fb-follow" data-href="https://www.facebook.com/profile.php?id=100009219667562" data-layout="standard" data-show-faces="true"></div>
@@ -41,7 +41,6 @@
 <ul id="menu">
   <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
-  <li><a href="/home/yuri">Yuri</a></li>
   <li><a href="/home/contacto">Contáctanos</a></li>.
   <li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
@@ -60,16 +59,12 @@
 <div id="rightside">
 
 <div class="rightdata">
-    
-<%= image_tag("yuri101.jpg", size: "200", class: "photo", alt: "photo") %>
-<h2>Historia del yuri</h2>
-<p>Yuri (百合? lirio) es un vocablo japonés para referirse al amor entre mujeres en manga, anime, y otros medios de expresión japoneses.1 Yuri puede centrarse tanto en los aspectos emocionales como en los aspectos sexuales de la relación. En 1971 Ito Bongaku, el editor de la revista homosexual Barazoku usó el término «Yurizoku» (tribu del lirio) para referirse forma que usaba el, el apelativo de «barazoku» (la tribu rosa) para los gays. Desde entonces los términos japoneses «bara» (rosa) y «yuri» (lirio) se usan de forma generalizada para denominar a los homosexuales masculinos y femeninos respectivamente. Se le conoce a un fan del yuri como Taeko. Posteriormente el nombre ha sido utilizado por muchos artistas de manga y doujinshi hentai, que comenzaron a nombrar a sus personajes femeninos Yuri o Yuriko, hasta que se volvió una especie de cliché, alejando al término de su significado original. Por ejemplo, una de las parejas más vistas en los primeros doujinshi hentai fue Kei y Yuri de Dirty Pair.2</p>
+    Aqui va todo tipo de informacion relevante, ya sea noticias importantes, informacion util, etc.
 </div>
 
 <div class="rightdata">
 </div>
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/73505637&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
 
 
 <div id="disqus_thread"></div>
