--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,7 +41,10 @@
 <ul id="menu">
   <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
-  <li><a href="/home/contacto">Contáctanos</a></li>.
+  <li><a href="/home/contacto">Contáctanos</a></li>
+  <li><a href="/foro/foroPrincipal">Foro</a></li>
+<li><a href="/noticias/index">Noticias</a></li>
+<li>.</li>
   <li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
       <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
@@ -100,10 +103,7 @@ s.setAttribute('data-timestamp', +new Date());
 
 <div id="leftnav">
 <ul>
-<h2>Secciones</h2>
-<li><a href="/foro/foroPrincipal">Foro</a></li>
-<li><a href="/posts">Noticias</a></li>
-<li><a href="/articulos/A3">Contenido multimedia</a></li>
+<h2>Paginas de interes</h2>
 </ul>
 </div>
 
@@ -115,7 +115,7 @@ s.setAttribute('data-timestamp', +new Date());
 </div>
 
 <div class="leftdata">
-<div class="fb-page" data-href="https://www.facebook.com/BibliotecaNacionaldeChile/" data-tabs="timeline" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/NothinTrumpsRump"><a href="https://www.facebook.com/NothinTrumpsRump">Space Dandy Booty Hunter</a></blockquote></div></div>
+<div class="fb-page" data-href="https://www.facebook.com/BibliotecaNacionaldeChile/" data-tabs="timeline" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/NothinTrumpsRump"><a href="https://www.facebook.com/NothinTrumpsRump">Facebook</a></blockquote></div></div>
 </div>
 
 </div>
