--- a/app/assets/stylesheets/noticias.scss
+++ b/app/assets/stylesheets/noticias.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the noticias controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+img { 
+    max-width: 100%; 
+    height: auto; 
+}
+video {
+	max-width: 100%;
+	height: auto;
+}
+iframe{
+    width: 100%;
+    height: 100; 
+    
+}
