--- a/app/views/foro/foroPrincipal.html.erb
+++ b/app/views/foro/foroPrincipal.html.erb
@@ -6,7 +6,7 @@
 <meta name="description" content="A new template for open designs" />
 <meta name="keywords" content="lorem ipsum, lorem ipsum" />	
 <link rel="stylesheet" type="text/css" href="template05.css" media="screen" />
-
+<script src="jquery-1.3.2.min.js" type="text/javascript"></script>
 <title>Archivo de Música</title>
 </head>
 <body>
@@ -37,8 +37,10 @@
 <ul id="menu">
   <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
-  <li><a href="/home/contacto">Contáctanos</a></li>.
-  <li>
+  <li><a href="/home/contacto">Contáctanos</a></li>
+  <li><a href="/foro/foroPrincipal">Foro</a></li>
+<li><a href="/noticias/index">Noticias</a></li>.
+<li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
       <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
       <input type="submit" value="Buscar" class="tfbutton">
@@ -53,8 +55,10 @@
 
 <div class="clear"></div> 
 <div id="rightside">
-<a class="muut" href="https://muut.com/i/proyectoisw">proyectoisw</a>
+<a  id=1 class="muut" href="https://muut.com/i/proyectoisw">proyectoisw</a>
 <script src="//cdn.muut.com/1/moot.es.min.js"></script>
+
+
 
 <!-- This is where the gallery starts-->
 
@@ -67,15 +71,20 @@
 
 <div id="leftnav">
 <ul>
-<h2>Secciones</h2>
-<li><a href="/foro/foroPrincipal">Foro</a></li>
-<li><a href="/posts">Noticias</a></li>
-<li><a href="/articulos/A3">Contenido multimedia</a></li>
+<h2>Paginas de interes</h2>
+
 </ul>
 </div>
 
 </div>
+<div class="leftdata">
+  <a class="twitter-timeline"  href="https://twitter.com/BNChile" data-widget-id="686277197691252736">Tweets por el @BNChile.</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
+<div class="leftdata">
+<div class="fb-page" data-href="https://www.facebook.com/BibliotecaNacionaldeChile/" data-tabs="timeline" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/NothinTrumpsRump"><a href="https://www.facebook.com/NothinTrumpsRump">Facebook</a></blockquote></div></div>
+</div>
 </div>
 
 <div class="clear"></div> 
