--- a/app/views/noticias/show.html.erb
+++ b/app/views/noticias/show.html.erb
@@ -41,7 +41,9 @@
 <ul id="menu">
   <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
-  <li><a href="/home/contacto">Contáctanos</a></li>.
+  <li><a href="/home/contacto">Contáctanos</a></li>
+  <li><a href="/foro/foroPrincipal">Foro</a></li>
+<li><a href="/noticias/index">Noticias</a></li>.
   <li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
       <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
@@ -108,10 +110,7 @@ s.setAttribute('data-timestamp', +new Date());
 
 <div id="leftnav">
 <ul>
-<h2>Secciones</h2>
-<li><a href="/foro/foroPrincipal">Foro</a></li>
-<li><a href="/posts">Noticias</a></li>
-<li><a href="/articulos/A3">Contenido multimedia</a></li>
+<h2>Paginas de interes</h2>
 </ul>
 </div>
 
