--- a/app/views/noticias/index.html.erb
+++ b/app/views/noticias/index.html.erb
@@ -2,9 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta name="author" content="collin grasley"/>
-<meta name="description" content="A new template for open designs" />
-<meta name="keywords" content="lorem ipsum, lorem ipsum" /> 
 <link rel="stylesheet" type="text/css" href="template05.css" media="screen" />
 
 <title>Archivo de música</title>
@@ -25,7 +22,7 @@
 
 <div id="header">
   <h1>Archivo de música</h1>
-  <a href="/home/index">
+  <a href="/noticias/index">
       <%= image_tag("portada.png", size: "227x195", class: "image", alt: "Portada") %>
       
   </a>
@@ -39,11 +36,12 @@
 <!-- end main pic - this is a background image-->
         
 <ul id="menu">
-  <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
   <li><a href="/home/contacto">Contáctanos</a></li>
   <li><a href="/foro/foroPrincipal">Foro</a></li>
-<li><a href="/noticias/index">Noticias</a></li>.
+<li><a href="/noticias/index">Noticias</a></li>
+<li><a href="/users/sign_in">Conectarse</a></li>
+<li><a href="/users/sign_out">Desconectarse</a></li>.
   <li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
       <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
@@ -61,10 +59,22 @@
 <div id="rightside">
 
 <div class="rightdata">
+  <% flash.each do |key, value| %>
+  <%= content_tag :div, value, class: "flash #{key}" %>
+<% end %>
     <table> 
   <% @noticias.each do |noticia| %>
     <tr><p>
-      <%= link_to noticia.titulo.html_safe, "/noticias/"+noticia.id.to_s %>
+      <table>
+        <td> <%= image_tag noticia.portada.url(:medium) %></td>
+         <td>
+            <h2><%= noticia.titulo %></h2><br>
+            <%= noticia.descripcion %><br>
+            <%= link_to "Ver más", "/noticias/"+noticia.id.to_s %>
+            </td>
+
+      
+      </table>
     </p>
     </tr>
   <% end %>
