--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,139 @@
-<h2>Forgot your password?</h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <!-- HTML Codes by Quackit.com -->
+        <title>SiGeSol</title>
+        <meta name="keywords" content="meh, potato">
+        <meta name="description" content="uguu~">
+        <style type="text/css">
+        body {
+        	background-color:#938043;
+        	background-repeat:no-repeat;
+        	background-position:bottom right;
+        	background-attachment:fixed;
+        	}
+        
+        h2 {font-family:'Open Sans',sans-serif;
+        	font-size:200%;
+        	text-align:center;
+        	margin-top:5%;
+        	font-style:normal;
+        	font-weight:normal;
+        	color:#000000;
+        	}
+        	
+        	@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+        
+        *{margin:0;padding:0;}
+        
+        
+        
+        .button{
+          width:100px;
+          background:#2F0E00;
+          display:block;
+          margin:0 auto;
+          margin-top:1%;
+          padding:10px;
+          text-align:center;
+          text-decoration:none;
+          color:#fff;
+          cursor:pointer;
+          transition:background .3s;
+          -webkit-transition:background .3s;
+        }
+        
+        .button:hover{
+          background:#2288bb;
+        }
+        
+        #login{
+          width:400px;
+          margin:5%;
+          margin-top:5%;
+          transition:opacity 1s;
+          -webkit-transition:opacity 1s;
+        }
+        
+        #login h1{
+          background:#2F0E00;
+          padding:20px 0;
+          font-size:180%;
+          font-weight:300;
+          text-align:center;
+          font-family:'Open Sans',sans-serif;
+          color:#fff;
+        }
+        
+        #title h1{
+          background:#2F0E00;
+          padding:20px 0;
+          font-size:200%;  
+          font-weight:300;
+          text-align:center;
+          font-family:'Open Sans',sans-serif;
+          color:#fff;
+        }
+        
+        form{
+          background:#d1d1d1;
+          padding:6% 4%;
+        }
+        
+        input[type="email"],input[type="password"],input[type="text"]{
+          width:92%;
+          background:#fff;
+          margin-bottom:4%;
+          border:1px solid #ccc;
+          padding:4%;
+          font-family:'Open Sans',sans-serif;
+          font-size:95%;
+          color:#555;
+        }
+        
+        input[type="submit"]{
+          width:100%;
+          margin-bottom:4%;
+          border:0;
+          padding:4%;
+          font-family:'Open Sans',sans-serif;
+          font-size:120%;
+          color:#fff;
+          cursor:pointer;
+          transition:background .3s;
+          -webkit-transition:background .3s;
+          background:#2F0E00;
+        }
+        input[type="button"]{
+          width:100%;
+          margin-bottom:0;
+          border:0;
+          padding:4%;
+          font-family:'Open Sans',sans-serif;
+          font-size:120%;
+          color:#fff;
+          cursor:pointer;
+          transition:background .3s;
+          -webkit-transition:background .3s;
+          background:#474747;
+        }
+        input[type="submit"]:hover{
+          background:#2288bb;
+        }
+        input[type="button"]:hover{
+          background:#2288bb;
+        }
+        
+        </style>
+    </head>
+    <body>
+        <div id="title">
+            <h1 style="Font-size:50px"; >
+                <b>Sistema de password olvidado</b>
+            </h1>
+        </div>
+        <div id="login">
+            <h2>Olvidaste tu password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,8 +144,19 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Enviar instrucciones de cambio de password" %>
+    <a href="/users/sign_up" target="_self"> <input type="button" name="boton" value="Registrarse" /> </a> 
+    <p></p>
+    <a href="/users/sign_in" target="_self"> <input type="button" name="boton" value="Conectarse" /> </a> 
+    <p></p>
+    <a href="/noticias/index" target="_self"> <input type="button" name="boton" value="Volver" /> </a> 
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+        </div>
+    </body>
+</html>
+
+
+
