--- a/app/views/foro/foroPrincipal.html.erb
+++ b/app/views/foro/foroPrincipal.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<meta name="author" content="collin grasley"/>
-<meta name="description" content="A new template for open designs" />
-<meta name="keywords" content="lorem ipsum, lorem ipsum" />	
 <link rel="stylesheet" type="text/css" href="template05.css" media="screen" />
 <script src="jquery-1.3.2.min.js" type="text/javascript"></script>
+<script>
+  $(document).ready(function(){    
+    //Check if the current URL contains '#'
+    if(document.URL.indexOf("#")==-1){
+        // Set the URL to whatever it was plus "#".
+        url = document.URL+"#";
+        location = "#";
+
+        //Reload the page
+        location.reload(true);
+    }
+});
+  
+</script>
 <title>Archivo de Música</title>
 </head>
 <body>
@@ -22,7 +32,7 @@
 
 <div id="header">
   <h1>Archivo de música</h1>
-  <a href="/home/index">
+  <a href="/noticias/index">
       <%= image_tag("portada.png", size: "227x195", class: "image", alt: "Portada") %>
   </a>
   <div class="fb-follow" data-href="https://www.facebook.com/profile.php?id=100009219667562" data-layout="standard" data-show-faces="true"></div>
@@ -35,11 +45,12 @@
 <!-- end main pic - this is a background image-->
 				
 <ul id="menu">
-  <li><a href="/home/index">Home</a></li>
   <li><a href="/home/about">Acerca de Nosotros</a></li>
   <li><a href="/home/contacto">Contáctanos</a></li>
   <li><a href="/foro/foroPrincipal">Foro</a></li>
-<li><a href="/noticias/index">Noticias</a></li>.
+<li><a href="/noticias/index">Noticias</a></li>
+<li><a href="/users/sign_in">Conectarse</a></li>
+<li><a href="/users/sign_out">Desconectarse</a></li>.
 <li>
     <form id="tfnewsearch" method="get" action="http://www.google.com">
       <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
@@ -55,9 +66,10 @@
 
 <div class="clear"></div> 
 <div id="rightside">
-<a  id=1 class="muut" href="https://muut.com/i/proyectoisw">proyectoisw</a>
+  <div id="1">
+<a class="muut" href="https://muut.com/i/proyectoisw">proyectoisw</a>
 <script src="//cdn.muut.com/1/moot.es.min.js"></script>
-
+</div>
 
 
 <!-- This is where the gallery starts-->
