--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -47,6 +47,7 @@ $(document).ready(function(){
   <li><a href="/home/contacto">Contáctanos</a></li>
   <li><a href="/foro/foroPrincipal">Foro</a></li>
 <li><a href="/noticias/index">Noticias</a></li>
+<li><a href="/emailapi">Suscripción</a></li>
 <li><a href="/users/sign_in">Conectarse</a></li>
 <li><a href="/users/sign_out">Desconectarse</a></li>.
 <li>
