--- a/app/views/emailapi/index.html.erb
+++ b/app/views/emailapi/index.html.erb
@@ -40,6 +40,7 @@
   <li><a href="/home/contacto">Contáctanos</a></li>
   <li><a href="/foro/foroPrincipal">Foro</a></li>
 <li><a href="/noticias/index">Noticias</a></li>
+<li><a href="/emailapi">Suscripción</a></li>
 <li><a href="/users/sign_in">Conectarse</a></li>
 <li><a href="/users/sign_out">Desconectarse</a></li>
 <li>.</li>
@@ -75,7 +76,7 @@ Actualiza tus intereses para nuestras listas de correo:
 
 <%= submit_tag("Suscribir") %>
 <% end %>
-<a href="/emailapi/unsuscribe" target="_self"> <input type="button" name="boton" value="Desuscribir" /> </a> 
+<a href="/emailapi/unsuscribe" target="_self"> <input type="button" name="boton" value="Cancelar Suscripción" /> </a> 
 </div>
 
 <div class="rightdata">
