--- a/app/views/emailapi/index.html.erb
+++ b/app/views/emailapi/index.html.erb
@@ -45,8 +45,8 @@
 <li><a href="/users/sign_out">Desconectarse</a></li>
 <li>.</li>
   <li>
-    <form id="tfnewsearch" method="get" action="http://www.google.com">
-      <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
+    <form id="tfnewsearch" action="/intento1/i1" method="get">
+      <input type="text" class="tftextinput" name=q size="18" maxlength="120">
       <input type="submit" value="Buscar" class="tfbutton">
     </form>
   </li>
