--- a/app/views/noticias/index.html.erb
+++ b/app/views/noticias/index.html.erb
@@ -53,8 +53,8 @@ $(document).ready(function(){
 <li><a href="/users/sign_in">Conectarse</a></li>
 <li><a href="/users/sign_out">Desconectarse</a></li>.
   <li>
-    <form id="tfnewsearch" method="get" action="http://www.google.com/search">
-      <input type="text" class="tftextinput" name="q" size="18" maxlength="120">
+    <form id="tfnewsearch" action="/intento1/i1" method="get">
+      <input type="text" class="tftextinput" name=q size="18" maxlength="120">
       <input type="submit" value="Buscar" class="tfbutton">
     </form>
   </li>
